--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -20,5 +20,8 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:core:1.0.0"
     implementation "com.acmerobotics.roadrunner:actions:1.0.0"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+
+    implementation 'org.ftclib.ftclib:core:1.2.1' // core
+
 }
 
