--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,6 +2,7 @@ repositories {
     mavenCentral()
     google() // Needed for androidx
     maven { url = 'https://maven.brott.dev/' }
+    maven { url= 'https://maven.pedropathing.com/' }
 }
 
 dependencies {
@@ -23,5 +24,7 @@ dependencies {
 
     implementation 'org.ftclib.ftclib:core:1.2.1' // core
 
+    implementation 'com.pedropathing:pedro:1.0.6'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 }
 
