made loop time capability, tested presets, maybe fixed xml file

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -38,7 +38,9 @@ repositories {
     maven {
         url = 'https://www.matthewo.tech/maven/'
     }
-
+    maven {
+        url = 'https://repo.dairy.foundation/releases'
+    }
 }
 
 dependencies {
