--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -1,10 +1,9 @@
 import java.text.SimpleDateFormat
-apply plugin: 'com.android.application'
 
 //
 // build.gradle in FtcRobotController
 //
-
+apply plugin: 'com.android.library'
 
 android {
 
